--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>疫情数据</title>
   </head>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <body style="overflow:-Scroll;overflow-x:hidden">
     <div id="app"></div>
     <!-- built files will be auto injected -->
