新增海外板块

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     *{
       margin: 0;
       padding: 0;
+      touch-action: pan-y; 
     }
   </style>
   <body style="overflow:-Scroll;overflow-x:hidden">
