新增滚动新闻相关

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       touch-action: pan-y; 
     }
   </style>
-  <body style="overflow:-Scroll;overflow-x:hidden">
+  <body style="overflow:-Scroll;overflow-x:hidden;background-color: #eee;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
