--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       touch-action: pan-y; 
     }
   </style>
-  <body style="overflow:-Scroll;overflow-x:hidden;background-color: #f7f7f7;">
+  <body style="overflow:-Scroll;overflow-x:hidden;background-color: #fff;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
