疾病知识板块更新

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
       padding: 0;
       touch-action: pan-y; 
     }
+    body{
+      height:100%;
+      overflow:auto;
+      margin: 0;
+      overflow:-Scroll;
+      overflow-x:hidden;
+      background-color: #fff;
+    }
   </style>
-  <body style="overflow:-Scroll;overflow-x:hidden;background-color: #fff;">
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
