--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       overflow-x:hidden;
       background-color: #fff;
     }
+    html {
+      scroll-snap-type: y proximity;
+    }
   </style>
   <body>
     <div id="app"></div>
